[gd_scene load_steps=11 format=3 uid="uid://d1ei1aha8uiwp"]

[ext_resource type="Script" path="res://Script/opening.gd" id="1_kdf3j"]
[ext_resource type="Texture2D" uid="uid://yuptor3seauk" path="res://Assets/Ending/Ending Background.png" id="2_wjv85"]
[ext_resource type="Theme" uid="uid://dcsfl1wle774g" path="res://Assets/Styles/theme.tres" id="3_2xfhe"]
[ext_resource type="Texture2D" uid="uid://cv175bewyn8ub" path="res://Assets/Ending/death.png" id="3_iauqf"]
[ext_resource type="FontFile" uid="uid://qccqn5puw4gx" path="res://Assets/Fonts/PixelOperator8.ttf" id="4_e5hpj"]
[ext_resource type="FontFile" uid="uid://cghgc7rm1slap" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="5_ou8wj"]
[ext_resource type="AudioStream" uid="uid://2fq3equ8mwl2" path="res://Assets/audio/gameover.mp3" id="7_j1nq7"]

[sub_resource type="Theme" id="Theme_xw43f"]

[sub_resource type="LabelSettings" id="LabelSettings_qkct4"]
font = ExtResource("5_ou8wj")
font_size = 37
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bbvpd"]
font = ExtResource("5_ou8wj")

[node name="dead_level1" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kdf3j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(28.9132, 16.4124)

[node name="Background" type="Sprite2D" parent="Panel"]
self_modulate = Color(0.398412, 0.398412, 0.398412, 1)
position = Vector2(19.8871, 19.3147)
scale = Vector2(0.0169003, 0.0263719)
texture = ExtResource("2_wjv85")

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(20.233, 21.4472)
scale = Vector2(0.0310092, 0.0518713)
texture = ExtResource("3_iauqf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 9.85709
offset_top = 34.0596
offset_right = 155.857
offset_bottom = 86.0596
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.137291, 0.21204)
theme = SubResource("Theme_xw43f")

[node name="play" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_2xfhe")
theme_override_fonts/font = ExtResource("4_e5hpj")
text = "Try again"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_e5hpj")
text = "EXIT"

[node name="Label" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 2.10976
offset_top = 9.32222
offset_right = 316.11
offset_bottom = 32.3222
scale = Vector2(0.112814, 0.410823)
theme_override_colors/font_shadow_color = Color(0.905882, 0.4, 0, 1)
theme_override_colors/font_outline_color = Color(0.890196, 0.27451, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_ou8wj")
text = "Escaped successfully!"

[node name="YouAreDead" type="Label" parent="."]
layout_mode = 0
offset_left = 369.0
offset_top = 104.0
offset_right = 776.0
offset_bottom = 142.0
text = "You are Dead"
label_settings = SubResource("LabelSettings_qkct4")

[node name="CauseOfDeath" type="Label" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 245.0
offset_right = 817.0
offset_bottom = 268.0
text = "You waste too much time on the way "
label_settings = SubResource("LabelSettings_bbvpd")
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_j1nq7")
autoplay = true

[connection signal="pressed" from="Panel/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
